<resources>
    <string name="app_name">My Health</string>
    <string name="login">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="sex">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="doctorName">Doctor</string>
    <string name="url">http://ec2-54-149-85-123.us-west-2.compute.amazonaws.com/</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="current">Current</string>
    <string name="past30">Past 30 Days</string>
    <string name="week">Last 7 Days</string>
    <string name="heartrate">Heart Rate</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="patient_id">patient_id</string> !--- --!
    <string name="patient_name">patient_name</string>
    <string name="subject">Subject:</string>
    <string name="alert">Alert</string>
    <string name="notification">Notification</string>
    <string name="relation">Relation</string>
    <string name="save">Save</string>
    <string name="relativeDetails">Relatives Details</string>

    <string-array name="days_selector">
        <item>Current</item>
        <item>Last 7 Days</item>
        <item>Past 30 Days</item>
    </string-array>
    <string-array name="resource_selector">
        <item> Heart Rate</item>
        <item> Exercise</item>
    </string-array>
    <string-array name="navigation_drawer">
        <item>Measure</item>
    </string-array>
</resources>
