<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:hint = "@string/firstName"
            android:paddingTop="5dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:hint = "@string/lastName"
            android:paddingTop="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sex"
            android:hint="@string/sex"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dob"
            android:hint="@string/dob"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:hint="@string/phone"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:id="@+id/email"
            android:hint="@string/email"
            />
    </android.support.design.widget.TextInputLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">


    <android.support.design.widget.TextInputLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        >
        <android.support.design.widget.TextInputEditText
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"/>
    </android.support.design.widget.TextInputLayout>


  </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:id="@+id/doctor"
            android:paddingBottom="20dp"
            android:hint="@string/doctorName"/>
    </android.support.design.widget.TextInputLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:layout_gravity="right"
            android:padding="10dp"
            android:src="@mipmap/ic_mipmap_edit"
            />

    </GridLayout>


</LinearLayout>
